CFLAGS = --pedantic -Wall -std=c99 -g -ggdb
LDFLAGS = 

bin_PROGRAMS = test001 test002 test003 test004 \
							 test005 test006 test007 test008 \
							 gen

test001_SOURCES = test001.c ../src/base64c.c
test002_SOURCES = test002.c ../src/base64c.c
test003_SOURCES = test003.c ../src/base64c.c
test004_SOURCES = test004.c ../src/base64c.c
test005_SOURCES = test005.c ../src/base64c.c
test006_SOURCES = test006.c ../src/base64c.c
test007_SOURCES = test007.c ../src/base64c.c
test008_SOURCES = test008.c ../src/base64c.c
gen_SOURCES = gen.c
